--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mantine/dates": "^7.16.3",
     "@mantine/form": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
+    "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@types/react-router-dom": "^5.3.3",
