--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
   },
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.16",
     "prettier": "^3.4.2"
   }
 }
